fixed scrollbar on chrome

--- a/styling/global.css
+++ b/styling/global.css
@@ -65,6 +65,30 @@
     font-style: normal;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: none; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888; 
+}
+
+::-webkit-scrollbar-corner {
+  background: none;
+}
+
 a, a:hover, a:focus, a:active {
   text-decoration: none;
   color: inherit;
